[package]
name = "mlkem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = {version = "0.10.8", default-features = false}
typenum = {version = "1.17.0", default-features = false}

[profile.test]
opt-level = 3
