[package]
name = "capy_kem"
version = "0.1.7"
edition = "2021"
description = "Exercise in quantum-resistant cryptographic algorithm design."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hybrid-array = { version = "0.2.0-rc.8", features = ["extra-sizes"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["alloc", "derive"] }
sha3 = {version = "0.10.8", default-features = false}
typenum = {version = "1.17.0", default-features = false}

[profile.test]
opt-level = 3
